# Rust-MIDI-Keyboard

./: .gitignore  Cargo.toml  README.md  Trunk.toml
keyboard/: Cargo.toml
keyboard-backend/: Cargo.toml
keyboard-frontend/: Cargo.toml
keyboard-frontend/src/: lib.rs
keyboard/src/: lib.rs  main.rs
