[package]
name = "keyboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keyboard-frontend = {path = "../keyboard-frontend"}
keyboard-backend = {path = "../keyboard-backend"}
yew = {version = "0.21.0", features = ["csr"]}
stylist = {version = "0.13.0", features = ["yew", "parser"]}
gloo = "0.11.0"
rodio = "0.17.3"